hphp/test/zend/bad/ext/curl/tests/bug45161.php.skipif
<?php 
if (substr(PHP_OS, 0, 3) == 'WIN') {
	exit("skip not for Windows");
}
if (!extension_loaded("curl")) {
	exit("skip curl extension not loaded");
}
if (false === getenv('PHP_CURL_HTTP_REMOTE_SERVER'))  {
	exit("skip PHP_CURL_HTTP_REMOTE_SERVER env variable is not defined");
}
$curl_version = curl_version(); 
if ($curl_version['version_number'] < 0x071100) {
	exit("skip: test works only with curl >= 7.17.0"); 
}
?>